feat: Implement Filter per category for content list - EXO-88566 - eXIP7.3.0.12 (#848)